add Live Bitcoin Price Data Section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>
 
         <template id="sebCardItem">
-            <div class="container d-flex justify-content-center">
+            <div class="container d-flex justify-content-center my-5">
                 <div class="sebCard darkMode">
                     <div class="sebCardTitle py-2 px-5"></div>
                     <div class="sebCardItemsContainer"></div>
@@ -31,20 +31,13 @@
             </div>
         </template>
 
-        <template id="24HCryptoDataItem">
+        <template id="CryptoDataItem">
             <div class="d-flex flex-row justify-content-center align-items-center automaticBorderY darkMode text-center">
-                <h3 class="tickerSymbol-24HCryptoDataItem mx-1">Ticker</h3>
-                <h3 class="lastPrice-24HCryptoDataItem mx-2">Price</h3>
-                <div class="arrow-24HCryptoDataItem mx-2"></div>
-                <h3 class="percentagePriceChange-24HCryptoDataItem mx-1">Percentage</h3>
+                <h3 class="tickerSymbol-CryptoDataItem mx-1">Ticker</h3>
+                <h3 class="lastPrice-CryptoDataItem mx-2">Price</h3>
+                <div class="arrow-CryptoDataItem mx-2"></div>
+                <h3 class="percentagePriceChange-CryptoDataItem mx-1">Percentage</h3>
             </div>
-        </template>
-
-        <template id="liveBTCPriceItem">
-            <h3 class="tickerSymbol-liveBTCPriceItem mx-1">BTC</h3>
-            <h3 class="lastPrice-liveBTCPriceItem mx-2">Price</h3>
-            <div class="arrow-liveBTCPriceItem mx-2"></div>
-            <h3 class="percentagePriceChange-liveBTCPriceItem mx-1">Percentage</h3>
         </template>
 
         <script src="index.js"></script>
