add bottom border for header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <header class="d-flex justify-content-around flex-row align-items-center darkMode">
+        <header class="d-flex justify-content-around flex-row align-items-center darkMode automaticBorderB">
             <div></div>
             <h1>SebMedia</h1>
             <div id="lightDarkModeSwitch" class="d-flex justify-content-center align-items-stretch">
