--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
         <link rel="stylesheet" href="index.css">
     </head>
-    <body>
+    <body class="darkMode">
         <header class="d-flex justify-content-around flex-row align-items-center darkMode automaticBorderB">
             <div></div>
             <h1>SebMedia</h1>
@@ -46,6 +46,13 @@
                 <h3 class="Type-RandomActivityItem mx-2">Type</h3>
                 <h3 class="Participants-RandomActivityItem mx-2">Participants</h3>
                 <h3 class="Price-RandomActivityItem mx-1">Price</h3>
+            </div>
+        </template>
+
+        <template id="PublicIPItem">
+            <div class="automaticBorderY darkMode text-center px-4 py-2">
+                <h2 class="IPTitle-PublicIPItem">Your Public IP is:</h2>
+                <h2 class="IP-PublicIPItem">IP address goes here</h2>
             </div>
         </template>
 
